fix signature wrapping for mobile

--- a/src/components/GenshinUserCard/style.scss
+++ b/src/components/GenshinUserCard/style.scss
@@ -71,6 +71,19 @@
   }
 
   // @TODO: see how hoyolab cards are affected
+  .genshin-card-content {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr;
+    // grid-template-columns: 1fr calc(1fr - 200px);
+
+    .genshin-card-top-row {
+      grid-column: 1/3;
+      grid-row: 1/3;
+    }
+  }
+  
+  // @TODO: see how hoyolab cards are affected
   &.expanded {
     .badges-container-outer {
       display: flex;
@@ -85,17 +98,8 @@
       }
     }
     .genshin-card-content {
-      display: grid;
-      grid-template-columns: 1fr 200px;
-      grid-template-rows: 1fr 1fr;
-      .genshin-card-top-row {
-        grid-column: 1/3;
-        grid-row: 1/3;
-      }
       .card-signature {
         margin-top: 8px;
-        grid-column: 1;
-        grid-row: 2;
       }
     }
   }
@@ -180,8 +184,11 @@
       justify-content: space-between;
       flex-wrap: wrap-reverse;
       > div:first-child {
+        // width: calc(100% - 200px);
+        // min-width: 300px;
+        min-width: min(100%, 300px);
         width: calc(100% - 200px);
-        min-width: 300px;
+        flex: 1;
       }
     }
     .card-big-text {
